logs/validate.20260409-010007.log
Mode: isolate
Isolate: including Chap65 Chap37 Chap45 Chap18 Chap19 Chap23 Chap06 Chap05 Chap02
error[E0252]: the name `obeys_feq_clone` is defined multiple times
  --> src/Chap65/PrimStEph.rs:48:9
   |
42 |     use crate::vstdplus::feq::feq::obeys_feq_clone;
   |         ------------------------------------------ previous import of the value `obeys_feq_clone` here
...
48 |     use crate::vstdplus::feq::feq::obeys_feq_clone;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `obeys_feq_clone` reimported here
   |
   = note: `obeys_feq_clone` must be defined only once in the value namespace of this module

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0252`.
Elapsed: 9s
Sampled Memory Usage: peak rust_verify RSS: 4841MB, peak z3 RSS: 806MB, min free: 20198MB
Sampled CPU Usage: rust_verify: 83s, z3 children: 93s
